@@ -1,11 +1,7 @@
 package hcmute.edu.vn.discord.controller;
 
 import hcmute.edu.vn.discord.dto.request.ServerRequest;
-import hcmute.edu.vn.discord.dto.response.CategoryResponse;
-import hcmute.edu.vn.discord.dto.response.ChannelResponse;
-import hcmute.edu.vn.discord.dto.response.ServerDetailResponse;
-import hcmute.edu.vn.discord.dto.response.ServerMemberResponse;
-import hcmute.edu.vn.discord.dto.response.ServerResponse;
+import hcmute.edu.vn.discord.dto.response.*;
 import hcmute.edu.vn.discord.entity.jpa.Server;
 import hcmute.edu.vn.discord.repository.CategoryRepository;
 import hcmute.edu.vn.discord.repository.ServerMemberRepository;
@@ -22,7 +18,6 @@ import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/servers")
@@ -35,62 +30,38 @@ public class ServerController {
     private final ServerMemberRepository serverMemberRepository;
     private final ServerAuth serverAuth;
 
-    // 1. TẠO SERVER
     @PostMapping
     @PreAuthorize("isAuthenticated()")
     public ResponseEntity<ServerResponse> createServer(@Valid @RequestBody ServerRequest request) {
         request.normalize();
-
         Server saved = serverService.createServer(request);
-
-        URI location = ServletUriComponentsBuilder
-                .fromCurrentRequest()
-                .path("/{id}")
-                .buildAndExpand(saved.getId())
-                .toUri();
-
+        URI location = ServletUriComponentsBuilder.fromCurrentRequest().path("/{id}").buildAndExpand(saved.getId()).toUri();
         return ResponseEntity.created(location).body(ServerResponse.from(saved));
     }
 
-    // 2. CẬP NHẬT
     @PutMapping("/{id}")
     @PreAuthorize("@serverAuth.isOwner(#id, authentication.name)")
-    public ResponseEntity<ServerResponse> updateServer(@PathVariable Long id,
-                                                       @Valid @RequestBody ServerRequest request) {
+    public ResponseEntity<ServerResponse> updateServer(@PathVariable Long id, @Valid @RequestBody ServerRequest request) {
         request.normalize();
-
         Server updated = serverService.updateServer(id, request);
         return ResponseEntity.ok(ServerResponse.from(updated));
     }
 
-    // 3. LẤY CHI TIẾT SERVER
     @GetMapping("/{id}/detail")
     @PreAuthorize("@serverAuth.isMember(#id, authentication.name)")
-    public ResponseEntity<ServerDetailResponse> getServerDetail(
-            @PathVariable Long id,
-            Authentication authentication) {
-
+    public ResponseEntity<ServerDetailResponse> getServerDetail(@PathVariable Long id, Authentication authentication) {
         String username = authentication.getName();
-
-        // Query 1: Lấy Server + Owner (Nhờ @EntityGraph trong ServerRepository)
         Server server = serverService.getServerById(id);
 
-        // Query 2: Lấy Categories (Nhanh do query đơn giản)
         List<CategoryResponse> categories = categoryRepository.findByServerId(id).stream()
-                .map(CategoryResponse::from)
-                .toList();
+                .map(CategoryResponse::from).toList();
 
-        // Query 3: Lấy Channels + Categories + Permissions (Nhờ @EntityGraph trong ChannelRepository)
-        // -> Bước filter và map bên dưới sẽ KHÔNG gọi thêm query nào nữa (tránh lỗi N+1)
         List<ChannelResponse> channels = channelService.getChannelsByServer(id).stream()
-                .filter(c -> serverAuth.canViewChannel(c.getId(), username)) // Check quyền xem kênh
-                .map(ChannelResponse::from)
-                .toList();
+                .filter(c -> serverAuth.canViewChannel(c.getId(), username))
+                .map(ChannelResponse::from).toList();
 
-        // Query 4: Lấy Members + User + Roles (Nhờ @EntityGraph)
         List<ServerMemberResponse> members = serverMemberRepository.findByServerId(id).stream()
-                .map(ServerMemberResponse::from)
-                .toList();
+                .map(ServerMemberResponse::from).toList();
 
         return ResponseEntity.ok(ServerDetailResponse.builder()
                 .serverInfo(ServerResponse.from(server))
@@ -100,33 +71,24 @@ public class ServerController {
                 .build());
     }
 
-    // 4. LẤY ALL (Dùng cho Admin hoặc trang khám phá)
     @GetMapping
     public ResponseEntity<List<ServerResponse>> getAllServers() {
-        List<ServerResponse> servers = serverService.getAllServers().stream()
-                .map(ServerResponse::from)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(servers);
+        return ResponseEntity.ok(serverService.getAllServers().stream()
+                .map(ServerResponse::from).toList());
     }
 
-    // 5. GET ONE
     @GetMapping("/{id}")
     public ResponseEntity<ServerResponse> getServerById(@PathVariable Long id) {
-        Server server = serverService.getServerById(id);
-        return ResponseEntity.ok(ServerResponse.from(server));
+        return ResponseEntity.ok(ServerResponse.from(serverService.getServerById(id)));
     }
 
-    // 6. GET MY SERVERS (Danh sách server user đã tham gia)
     @GetMapping("/me")
     @PreAuthorize("isAuthenticated()")
     public ResponseEntity<List<ServerResponse>> getMyServers() {
-        List<ServerResponse> servers = serverService.getServersByCurrentUsername().stream()
-                .map(ServerResponse::from)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(servers);
+        return ResponseEntity.ok(serverService.getServersByCurrentUsername().stream()
+                .map(ServerResponse::from).toList());
     }
 
-    // 7. DELETE (Chỉ Owner mới được xóa)
     @DeleteMapping("/{id}")
     @PreAuthorize("@serverAuth.isOwner(#id, authentication.name)")
     public ResponseEntity<Void> deleteServer(@PathVariable Long id) {
